Fix z-index of img-dimension-warning

--- a/sass/_img-dimension-warning.scss
+++ b/sass/_img-dimension-warning.scss
@@ -8,6 +8,7 @@
   left: 0;
   top: 0;
   background-color: rgba(0, 0, 0, 0.7);
+  z-index: 4;
 
   .img-dim-warn-popup {
     @include modal;
