--- a/sass/mixins/_modal.scss
+++ b/sass/mixins/_modal.scss
@@ -10,4 +10,5 @@
   transform: translate(-50%, -50%);
   background-color: #eee;
   padding: 20px;
+  z-index: 5;
 }
